# ohboy

./: Cargo.toml  flake.nix
crates/ohboy/: Cargo.toml
crates/ohboy/src/: app.rs  cpu.rs  emulator.rs  main.rs  mbc.rs  memory.rs  ppu.rs  ui.rs
crates/ohboy/src/app/: ui.rs
crates/ohboy/src/cpu/: instructions.rs  interrupt.rs  register.rs
crates/ohboy/src/emulator/: cpu.rs  dma.rs  joypad.rs  mbc.rs  memory.rs  ppu.rs  register.rs  rom.rs
crates/ohboy/src/emulator/cpu/: instructions.rs  interrupt.rs  register.rs  registers.rs
crates/ohboy/src/emulator/mbc/: romonly.rs
crates/ohboy/src/emulator/memory/: joypad.rs  vram.rs
crates/ohboy/src/mbc/: romonly.rs
crates/ohboy_macro/: Cargo.toml
crates/ohboy_macro/src/: lib.rs
src/: cpu.rs  main.rs  mbc.rs  memory.rs  rom.rs
src/cpu/: instructions.rs  register.rs  registers.rs
src/mbc/: romonly.rs
