[package]
name = "ohboy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bitflags = "2.11.0"
bytemuck = "1.25.0"
egui = "0.34.1"
egui-wgpu = "0.34.1"
paste = "1.0.15"
pollster = "0.4.0"
serde = "1.0.228"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
wgpu = "29.0.1"
winit = "0.30.13"

ohboy_macro = { workspace = true }
